test/sema/unsupported-member-access.delta.output
unsupported-member-access.delta:7:19: error: no member named 'bar' in 'Foo'
    var bar = Foo.bar;
                  ^
