test/sema/unsupported-member-access.delta
// RUN: %check_errors %not %delta -typecheck %s

struct Foo {}

void main() {
    // CHECK: [[@LINE+1]]:19: error: no member named 'bar' in 'Foo'
    var bar = Foo.bar;
}
